--- a/MIPT/Interface_development__layout and JavaScript/course2/2ndweek/css/css.css
+++ b/MIPT/Interface_development__layout and JavaScript/course2/2ndweek/css/css.css
@@ -6,23 +6,23 @@ body {
 .wrapper {
     width: 1200px;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .good__cards {
     list-style: none;
-    padding: 5px;
+    padding: 0;
     margin: 0;
-    width: 95%;
-    overflow: hidden;
+    width: 3600px;
     box-sizing: border-box;
 }
 
 .good__cards li {
     margin: 0;
-    padding: 0;
+    padding: 3px;
     float: left;
-    width: 25%;
-    position: relative;
+    width: 300px;
+    box-sizing: border-box;
 }
 
 .good__cards .good__card {
@@ -41,24 +41,36 @@ body {
 
 .good__cards .good__card .good__card__description {
     display: none;
-}
-
-.good__cards .good__card .good__card__description span {
-    font-size: 1.5em;
-    color: green;
-    display: block;
+    text-align: justify;
 }
 
 .good__cards .good__card:hover {
     box-shadow: 0px 0px 3px;
     box-sizing: border-box;
-    position: ;
-    z-index: 1000;
     padding: 5px;
-    margin: 0;
 }
 
 .good__cards .good__card:hover .good__card__description {
     display: block;
-    text-align: justify;
+}
+
+.control {
+    list-style: none;
+    position: absolute;
+    right: 50%;
+    top: 200px;
+    z-index: 100;
+}
+.control li {
+    float: left;
+}
+
+.radioButton2:checked ~ .good__cards {
+    right: 0px;
+}
+.radioButton2:checked ~ .good__cards {
+    right: -1200px;
+}
+.radioButton3:checked ~ .good__cards {
+    right: -2400px;
 }
