--- a/MIPT/Interface_development__layout and JavaScript/course2/2ndweek/css/css.css
+++ b/MIPT/Interface_development__layout and JavaScript/course2/2ndweek/css/css.css
@@ -15,6 +15,7 @@ body {
     margin: 0;
     width: 3600px;
     box-sizing: border-box;
+    position: relative;
 }
 
 .good__cards li {
@@ -65,7 +66,7 @@ body {
     float: left;
 }
 
-.radioButton2:checked ~ .good__cards {
+.radioButton1:checked ~ .good__cards {
     right: 0px;
 }
 .radioButton2:checked ~ .good__cards {
@@ -73,4 +74,34 @@ body {
 }
 .radioButton3:checked ~ .good__cards {
     right: -2400px;
+}
+
+.modal {
+    background-color: #333;
+    opacity: 0.7;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 200;    
+}
+
+.close { 
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    z-index: 800;
+    display: none;
+}
+
+.close:checked ~ .modal {
+    display: none;
+}
+
+.modal .image{
+    position: relative;
+    top: 150px;
+    left: 30%;
+    max-width: 50%;  
+    opacity: 1;
+    z-index: 300;  
 }
